--- a/partials/api/barney.analytics.BarneyAnalytics.html
+++ b/partials/api/barney.analytics.BarneyAnalytics.html
@@ -21,15 +21,15 @@ Note that I included BarneyAnalytics as dependency but I have renamed it as Anal
 <ul class="methods"><li><h3 id="methods_init">init(options)</h3>
 <div class="init"><div class="barney-analytics-barneyanalytics-init-page"><p>Init analytics service</p>
 </div><h5 id="methods_init_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>options</td><td><a href="" class="label type-hint type-hint-object">Object</a></td><td><div class="barney-analytics-barneyanalytics-init-page"><p>(see attributes below)</p>
-</div></td></tr><tr><td>options.enabled</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="barney-analytics-barneyanalytics-init-page"><p>enable/disable tracking on Google Analytics</p>
-</div> <p><em>(default: true)</em></p></td></tr><tr><td>options.verbose</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="barney-analytics-barneyanalytics-init-page"><p>enable/disable verbose mode, with logging</p>
-</div> <p><em>(default: false)</em></p></td></tr><tr><td>options.logger</td><td><a href="" class="label type-hint type-hint-object">Object</a></td><td><div class="barney-analytics-barneyanalytics-init-page"><p>logging methods to use for verbose mode (see example below)</p>
-</div> <p><em>(default: Object())</em></p></td></tr><tr><td>options.dimensions</td><td><a href="" class="label type-hint type-hint-object">Object</a></td><td><div class="barney-analytics-barneyanalytics-init-page"><p>list of custom dimensions that will be used in the app (see example below)</p>
+</div><table><thead><tr><th>Property</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>enabled</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="barney-analytics-barneyanalytics-init-page"><p>enable/disable tracking on Google Analytics</p>
+</div> <p><em>(default: true)</em></p></td></tr><tr><td>verbose</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="barney-analytics-barneyanalytics-init-page"><p>enable/disable verbose mode, with logging</p>
+</div> <p><em>(default: false)</em></p></td></tr><tr><td>logger</td><td><a href="" class="label type-hint type-hint-object">Object</a></td><td><div class="barney-analytics-barneyanalytics-init-page"><p>logging methods to use for verbose mode (see example below)</p>
+</div> <p><em>(default: Object())</em></p></td></tr><tr><td>dimensions</td><td><a href="" class="label type-hint type-hint-object">Object</a></td><td><div class="barney-analytics-barneyanalytics-init-page"><p>list of custom dimensions that will be used in the app (see example below)</p>
 <ul>
 <li><em>key</em>: custom dimension name</li>
 <li><em>value</em>: slot id</li>
 </ul>
-</div> <p><em>(default: Object())</em></p></td></tr></tbody></table><h4 id="methods_init_example">Example</h4>
+</div> <p><em>(default: Object())</em></p></td></tr></tbody></table></td></tr></tbody></table><h4 id="methods_init_example">Example</h4>
 <div class="example"><div class="barney-analytics-barneyanalytics-init-page"><h5 id="methods_init_example_logger">Logger</h5>
 <p>Logger with window.console
 <pre class="prettyprint linenums">
@@ -63,7 +63,7 @@ angular.module('mock').controller('HomePageController', [
 </pre>
 <h5 id="methods_init_example_custom-dimensions">Custom Dimensions</h5>
 <p>In analytics initialization phase, you have to define all custom dimensions that you will use in application.</p>
-<p><strong><em>Init method don&#39;t set custom dimension on Google Analytics, it only saves custom dimension for future use (for example in event tracking).</em></strong></p>
+<p><strong><em>Init method doesn&#39;t set custom dimension on Google Analytics, it only saves custom dimension for future use (for example in event tracking).</em></strong></p>
 <p>You have to pass a pair (custom dimension name, slot id), where slot id is the slot of custom dimension assigned from Google Analytics before.</p>
 <p>In this example, I set two custom dimensions (&quot;UserStatus&quot; with slot number 1 and &quot;Valuable&quot; with slot number 5):
 <pre class="prettyprint linenums">
@@ -110,15 +110,15 @@ Analytics.setDimension({
 <li><h3 id="methods_trackevent">trackEvent(options)</h3>
 <div class="trackevent"><div class="barney-analytics-barneyanalytics-trackevent-page"><p>Track an event</p>
 </div><h5 id="methods_trackevent_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>options</td><td><a href="" class="label type-hint type-hint-object">Object</a></td><td><div class="barney-analytics-barneyanalytics-trackevent-page"><p>(see attributes below)</p>
-</div></td></tr><tr><td>options.category</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="barney-analytics-barneyanalytics-trackevent-page"><p>event category</p>
-</div></td></tr><tr><td>options.action</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="barney-analytics-barneyanalytics-trackevent-page"><p>event action</p>
-</div></td></tr><tr><td>options.label</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="barney-analytics-barneyanalytics-trackevent-page"><p>event label</p>
-</div></td></tr><tr><td>options.value</td><td><a href="" class="label type-hint type-hint-integer">integer</a></td><td><div class="barney-analytics-barneyanalytics-trackevent-page"><p>event value</p>
-</div></td></tr><tr><td>options.dimensions</td><td><a href="" class="label type-hint type-hint-object">Object</a></td><td><div class="barney-analytics-barneyanalytics-trackevent-page"><ul>
+</div><table><thead><tr><th>Property</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>category</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="barney-analytics-barneyanalytics-trackevent-page"><p>event category</p>
+</div></td></tr><tr><td>action</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="barney-analytics-barneyanalytics-trackevent-page"><p>event action</p>
+</div></td></tr><tr><td>label</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="barney-analytics-barneyanalytics-trackevent-page"><p>event label</p>
+</div></td></tr><tr><td>value</td><td><a href="" class="label type-hint type-hint-integer">integer</a></td><td><div class="barney-analytics-barneyanalytics-trackevent-page"><p>event value</p>
+</div></td></tr><tr><td>dimensions</td><td><a href="" class="label type-hint type-hint-object">Object</a></td><td><div class="barney-analytics-barneyanalytics-trackevent-page"><ul>
 <li><em>key</em>: custom dimension name</li>
 <li><em>value</em>: custom dimension value</li>
 </ul>
-</div></td></tr></tbody></table><h4 id="methods_trackevent_example">Example</h4>
+</div></td></tr></tbody></table></td></tr></tbody></table><h4 id="methods_trackevent_example">Example</h4>
 <div class="example"><div class="barney-analytics-barneyanalytics-trackevent-page"><pre class="prettyprint linenums">
 Analytics.trackEvent({
     category: 'UI',
@@ -137,13 +137,13 @@ Note: the custom dimension (in this example Valuable) has to defined in init met
 <li><h3 id="methods_trackpage">trackPage(options)</h3>
 <div class="trackpage"><div class="barney-analytics-barneyanalytics-trackpage-page"><p>To track a pageview</p>
 </div><h5 id="methods_trackpage_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>options</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="barney-analytics-barneyanalytics-trackpage-page"><p>(see attributes below)</p>
-</div></td></tr><tr><td>options.page</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="barney-analytics-barneyanalytics-trackpage-page"><p>event page (e.g. &#39;/category/7888&#39;)</p>
-</div></td></tr><tr><td>options.title</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="barney-analytics-barneyanalytics-trackpage-page"><p>event page title (e.g. &#39;Home Page&#39;)</p>
-</div></td></tr><tr><td>options.dimensions</td><td><a href="" class="label type-hint type-hint-object">Object</a></td><td><div class="barney-analytics-barneyanalytics-trackpage-page"><ul>
+</div><table><thead><tr><th>Property</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>page</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="barney-analytics-barneyanalytics-trackpage-page"><p>event page (e.g. &#39;/category/7888&#39;)</p>
+</div></td></tr><tr><td>title</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="barney-analytics-barneyanalytics-trackpage-page"><p>event page title (e.g. &#39;Home Page&#39;)</p>
+</div></td></tr><tr><td>dimensions</td><td><a href="" class="label type-hint type-hint-object">Object</a></td><td><div class="barney-analytics-barneyanalytics-trackpage-page"><ul>
 <li><em>key</em>: custom dimension name</li>
 <li><em>value</em>: custom dimension value</li>
 </ul>
-</div></td></tr></tbody></table></div>
+</div></td></tr></tbody></table></td></tr></tbody></table></div>
 </li>
 </ul>
 </div>
