--- a/partials/api/barney.config.html
+++ b/partials/api/barney.config.html
@@ -10,23 +10,25 @@ angular.module('yourApplicationModule', [
     'barney.config'
 ])
 </pre>
-<h2 id="init-config">Init Config</h2>
-<p>In order to allow a pretty response from the config module if a variable doesn&#39;t exist, you can set this by passing an object to the init method including the notExistValue param. The allowed values are null, false, 0 or a string.
- <a href="#/api/barney.config.BarneyConfig#methods_init">init</a>. </p>
-<h2 id="config-values">Config Values</h2>
-<p>Here is an example of Config object: 
+<h2 id="init-module">Init module</h2>
+<p>In order to use Config module you have to define an object with free keys and pass it 
+to the <a href="#/api/barney.config.BarneyConfig#methods_init">init</a> method.</p>
+</div><h2 id="example">Example</h2>
+<div class="example"><div class="barney-config-page"><p>Here is an example of how the Config object must be: 
 <pre class="prettyprint linenums">
-	var CONFIG = {
-		'ENABLE_LOGIN': 1,
-		'NEWTON_SECRET_KEY': '&lt;sec_ret&gt;',
-		'KEY_TRUE': true,
-		'KEY_VOID_STRING': '',
-		'KEY_ZERO': 0,
-		'KEY_ZERO_STRING': '0',
-		'KEY_NULL': null,
-		'KEY_NULL_STRING': 'null',
-		'KEY_FALSE': false,
-		'KEY_FALSE_STRING': 'false'
-	}
+var CONFIG = {
+	'ENABLE_LOGIN': 1,
+	'NEWTON_SECRET_KEY': '&lt;sec_ret&gt;',
+	'KEY_TRUE': true,
+	'KEY_VOID_STRING': '',
+	'KEY_ZERO': 0,
+	'KEY_ZERO_STRING': '0',
+	'KEY_NULL': null,
+	'KEY_NULL_STRING': 'null',
+	'KEY_FALSE': false,
+	'KEY_FALSE_STRING': 'false',
+	...
+}
 </pre>
 </div></div>
+</div>
