--- a/partials/api/barney.dict.BarneyDict.html
+++ b/partials/api/barney.dict.BarneyDict.html
@@ -29,7 +29,7 @@ angular.module('mock').controller('HomePageController', [
 'BarneyDict', '$scope',
   function(Dict, $scope){
 
-     console.log( Dict.get("VALUED_KEY") );
+     console.log(Dict.get('VALUED_KEY'));
 
  }
 ]);
@@ -40,19 +40,19 @@ angular.module('mock').controller('HomePageController', [
 <li><h3 id="methods_init">init(options)</h3>
 <div class="init"><div class="barney-dict-barneydict-init-page"><p>Init dict service</p>
 </div><h5 id="methods_init_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>options</td><td><a href="" class="label type-hint type-hint-object">Object</a></td><td><div class="barney-dict-barneydict-init-page"><p>(see attributes below)</p>
-</div></td></tr><tr><td>options.showKey</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="barney-dict-barneydict-init-page"><ul>
+</div><table><thead><tr><th>Property</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>showKey</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="barney-dict-barneydict-init-page"><ul>
 <li><strong>default</strong>: the dictionary module prints the value of the dictionary key if it&#39;s valued, else it prints nothing</li>
 <li><strong>all</strong>:  the dictionary module prints the name of the key, for all keys (valued and not valued keys)</li>
 <li><strong>missing</strong>: the dictionary module prints the value of the dictionary key if it&#39;s valued, else it prints the name of the key</li>
 </ul>
-</div> <p><em>(default: 'default')</em></p></td></tr></tbody></table><h4 id="methods_init_example">Example</h4>
+</div> <p><em>(default: 'default')</em></p></td></tr></tbody></table></td></tr></tbody></table><h4 id="methods_init_example">Example</h4>
 <div class="example"><div class="barney-dict-barneydict-init-page"><h5 id="methods_init_example_dict-init">Dict Init</h5>
 <p>if: 
 <pre class="prettyprint linenums">
 // Dict.existKey = 'Hello';
 // Dict.notExistKey = undefined; 
 </pre>
-<p>Dict with <em>default</em> showKey
+<p>Dict with <strong><em>default</em></strong> showKey
 <pre class="prettyprint linenums">
 
 angular.module('mock').controller('HomePageController', [
@@ -70,7 +70,7 @@ angular.module('mock').controller('HomePageController', [
 // Dict.existKey -&gt; Hello
 // Dict.notExistKey -&gt; 
 </pre>
-<p>Dict with <em>all</em> showKey
+<p>Dict with <strong><em>all</em></strong> showKey
 <pre class="prettyprint linenums">
 angular.module('mock').controller('HomePageController', [
     'BarneyDict', '$window', '$scope',
@@ -87,7 +87,7 @@ angular.module('mock').controller('HomePageController', [
 // Dict.existKey -&gt; [[existKey]]
 // Dict.notExistKey -&gt; [[notExistKey]]
 </pre>
-<p>Dict with <em>missing</em> showKey
+<p>Dict with <strong><em>missing</em></strong> showKey
 <pre class="prettyprint linenums">
 angular.module('mock').controller('HomePageController', [
     'BarneyDict', '$window', '$scope',
@@ -111,12 +111,13 @@ angular.module('mock').controller('HomePageController', [
 <div class="list"><div class="barney-dict-barneydict-list-page"><p>Get dictionary object</p>
 </div><h4 id="methods_list_example">Example</h4>
 <div class="example"><div class="barney-dict-barneydict-list-page"><h5 id="methods_list_example_dict-list">Dict list</h5>
+<p>This is an example of how to use list method.
 <pre class="prettyprint linenums">
 angular.module('mock').controller('HomePageController', [
 'BarneyDict', '$scope',
   function(Dict, $scope){
 
-     console.log( Dict.list() );
+     console.log(Dict.list());
 
  }
 ]);
