--- a/partials/api/analytics.html
+++ b/partials/api/analytics.html
@@ -2,7 +2,7 @@
 <div><span class="hint"></span>
 </div>
 </h1>
-<div><div class="barney-analytics-page"><p>Analytics is the module of Barney for Google Analytics.
+<div><div class="analytics-page"><p>Analytics is the module of Barney for Google Analytics.
 You can use it to:</p>
 <ul>
 <li>set user id</li>
@@ -20,5 +20,5 @@ angular.module('yourApplicationModule', [
 </pre>
 <h2 id="init-analytics">Init Analytics</h2>
 <p>Before using Analytics module, it must be initialized. 
-To initialize Analytics you can use the Analytics method <a href="#/api/barney.analytics.BarneyAnalytics#methods_init">init</a>.</p>
+To initialize Analytics you can use the Analytics method <a href="#/api/analytics.BarneyAnalytics#methods_init">init</a>.</p>
 </div></div>
