--- a/partials/api/dict.filter.dict.html
+++ b/partials/api/dict.filter.dict.html
@@ -1,15 +1,11 @@
 <h1><code ng:non-bindable="">dict</code>
-<div><span class="hint">filter in module <code ng:non-bindable="">barney.dict</code>
+<div><span class="hint">filter in module <code ng:non-bindable="">dict</code>
 </span>
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="barney-dict-filter-page barney-dict-filter-dict-page"><p>BarneyDict as a filter is useful if:</p>
-<ul>
-<li>you want to print the value of a dictionary key in template and it doesn&#39;t contain html code.</li>
-<li>you want use a dictionary as attribute of a html tag</li>
-</ul>
-<p>(see examples below)</p>
+<div class="description"><div class="dict-filter-page dict-filter-dict-page"><p>With BarneyDict you can print the value of a dictionary key but <strong>it hasn&#39;t to contain html code</strong>.</p>
+<p>If dictionary key contains html code, use <a href="#/api/dict.directive:dict">dict</a> directive</p>
 </div></div>
 <h2 id="usage">Usage</h2>
 <div class="usage"><h3 id="usage_in-html-template-binding">In HTML Template Binding</h3>
@@ -20,11 +16,13 @@
 </div>
 </div>
 <h2 id="example">Example</h2>
-<div class="example"><div class="barney-dict-filter-page barney-dict-filter-dict-page"><p>In this case I use dict as a filter to print the value of a dictionary key in template and it doesn&#39;t contain html code
+<div class="example"><div class="dict-filter-page dict-filter-dict-page"><p>In this case I use it to print the value of a dictionary key in template 
+(it hasn&#39;t to contain html code)
 <pre class="prettyprint linenums">
   {{ 'VALUED_KEY' | dict }}
 </pre>
-In this case I use dict as an attribute of an html tag
+In this case I use it to print he value of a dictionary key as an attribute of an html tag
+(it hasn&#39;t to contain html code)
 <pre class="prettyprint linenums">
    &lt;input type="text" value="{{ 'VALUED_KEY' | dict }}" /&gt;
 </pre>
