--- a/partials/api/storage.html
+++ b/partials/api/storage.html
@@ -2,7 +2,7 @@
 <div><span class="hint"></span>
 </div>
 </h1>
-<div><div class="barney-storage-page"><p>Storage is the module of Barney used to set and get values from 3 different storage:</p>
+<div><div class="storage-page"><p>Storage is the module of Barney used to set and get values from 3 different storage:</p>
 <ul>
 <li>Local Storage;</li>
 <li>Cookies;</li>
@@ -18,5 +18,5 @@ angular.module('yourApplicationModule', [
 </pre>
 <h2 id="init-storage">Init Storage</h2>
 <p>Before using Storage module, it must be initialized. 
-To initialize Storage you can use the Storage method <a href="#/api/barney.storage.BarneyStorage#methods_init">init</a>.</p>
+To initialize Storage you can use the Storage method <a href="#/api/storage.BarneyStorage#methods_init">init</a>.</p>
 </div></div>
